# bank_churn_analysis

./: .gitignore  README.md  home.py  main.py  pyproject.toml  top_mots_negatifs_titan.csv  top_mots_neutres_titan.csv  top_mots_positifs_titan.csv
.streamlit/: secrets.toml
data/: plaintes_consommateurs.xlsx
pages/: 1_Analyse_sentiments.py  2_Tendances_et_KPIs.py  3_Analyse_Mots_Clés.py  4_Plaintes_consommateurs.py
