[project]
name = "projet3-streamlit"
version = "0.1.0"
description = "Dashboard Avis Clients - Banque Titan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.29.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly==6.2.0",
    "seaborn==0.12.2",
    "matplotlib==3.7.2",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "wordcloud>=1.9.2",
    "textblob==0.17.1",
    "openpyxl==3.1.2",
    "python-dateutil==2.8.2",
    "joblib==1.5.1",
    "networkx==3.5",
    "networkz==1.0.6",
    "nltk==3.9.1",
    "regex==2024.11.6",
    "tqdm==4.67.1",
    "psycopg2>=2.9.10",
]
